# 518Projects

./: .gitignore  Asst1.tgz  Asst2.tgz  README.md
asst1/: Asst1.tgz
asst1/CODE/: .datastructs.c.swp  :q  CMakeLists.txt  Makefile  TEST  TEST.c  TEST1.c  data  data.c  data.csv  data1  data1.c  data1.csv  data2  data2.c  data2.csv  data3  data3.c  datastructs.c  datastructs_t.h  my_library_data.csv  my_pthread.c  my_pthread_t.h  my_scheduler.c  my_scheduler.h  pthread_test.c  readme.txt  test
asst1/CODE/data_tables/: data3.csv  data4.csv
asst1/LATEX/: main.tex
asst2/CODE/: .nfs0000000005ec44b700001269  .nfs0000000007271c1f00001268  CMakeLists.txt  Makefile  TEST  TEST.c  datastructs.c  datastructs_t.h  direct_mapping.c  direct_mapping.h  global_vals.h  malloc  malloc_test.c  memory_finder.c  memory_finder.h  my_malloc.c  my_malloc.h  my_malloc1.c  my_pthread.c  my_pthread_t.h  my_scheduler.c  my_scheduler.h  open_address_ht.c  open_address_ht.h  open_address_ht_test.c  pthread_test.c  temp_swap.h  test.txt  test_runner.c  test_runner.h  types.h
asst2/LATEX/: main.tex
